DeepL Translation Provider - 7.0.8.1 - SDLCOM-6492: - Updated logic to use the cached translation if the segment was previously translated. - Introduced a new setting in DeepL options to enable or disable resending draft translations. Integrated support for the - ITranslationProviderExtension interface to maintain compatibility with the MT Comparison Tool (SDLCOM-6521).

--- a/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/PluginResources.resx
+++ b/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/PluginResources.resx
@@ -227,4 +227,7 @@ The formatting aspects affected by this setting include:
   <data name="GlobalSettings_LoadGlossaryIds_Global_settings" xml:space="preserve">
     <value>Global settings</value>
   </data>
+  <data name="ResendDraft_Tooltip" xml:space="preserve">
+    <value>Determines whether the translation engine resends previously translated but unconfirmed segments for translation whenever you revisit them.</value>
+  </data>
 </root>
