--- a/Google Cloud Translation Provider/PluginResources.resx
+++ b/Google Cloud Translation Provider/PluginResources.resx
@@ -572,4 +572,7 @@ This action cannot be undone.</value>
   <data name="information_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\information-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="LanguageSupported_ShortName" xml:space="preserve">
+    <value>Google Translate</value>
+  </data>
 </root>
