Language Weaver Provider 2.0.6.0 - SDLCOM-6495: - Enhanced the Resend Draft feature to return an empty result when the segment is already translated. - Added support for the ITranslationProviderExtension interface to ensure compatibility with the MT Comparison Tool (SDLCOM-6524).

--- a/Language Weaver Provider/PluginResources.resx
+++ b/Language Weaver Provider/PluginResources.resx
@@ -270,6 +270,12 @@
   <data name="FeedbackView_Title" xml:space="preserve">
     <value>Give feedback!</value>
   </data>
+  <data name="LCCloud_ShortName" xml:space="preserve">
+    <value>Language Weaver Cloud</value>
+  </data>
+  <data name="LCEdge_ShortName" xml:space="preserve">
+    <value>Language Weaver Edge</value>
+  </data>
   <data name="LMPViewModel_ResetTitle" xml:space="preserve">
     <value>Reset to default</value>
   </data>
