Microsoft Translator Provider 2.0.7.0 - SDLCOM-6494: - Removed the Hardcoded translation result message - Enabled Category ID removal - Updated the source and target languages column in the configuration view - Added support for the ITranslationProviderExtension interface to ensure compatibility with the MT Comparison Tool

--- a/Microsoft Translator Provider/PluginResources.resx
+++ b/Microsoft Translator Provider/PluginResources.resx
@@ -382,4 +382,7 @@ It must be the same region you selected when you signed up for your multi-servic
   <data name="TellMe_ThirdParty" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\TellMe_ThirdParty.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Microsoft_ShortName" xml:space="preserve">
+    <value>Microsoft Translator</value>
+  </data>
 </root>
