Show when an option is not supported for an LP Only show TL compatible style per LP

--- a/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/PluginResources.resx
+++ b/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/PluginResources.resx
@@ -233,4 +233,7 @@ The formatting aspects affected by this setting include:
   <data name="NoStyle" xml:space="preserve">
     <value>No style</value>
   </data>
+  <data name="GlossariesNotSupported" xml:space="preserve">
+    <value>Not supported</value>
+  </data>
 </root>
